fixed bs on navbar collapse

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -129,8 +129,8 @@ p.h6 {
 /*mapbox*/
 body{
     background-color: black;
-    overflow-x: scroll;
-    overflow-y: scroll;
+    /*overflow-x: scroll;*/
+    /*overflow-y: scroll;*/
 }
 
 html{
